# ESPCuts

./: CMakeLists.txt  LICENSE.md  README.md  checkexec.py  details.txt  list.py  logparser.py  runtest.sh
benchmark/Continuous/: ex4_1_4.nl  ex4_1_6.nl  ex7_2_2.nl  ex7_2_3.nl  ex7_3_2.nl  ex8_1_7.nl  ex8_5_1.nl  ex8_5_4.nl  ex8_5_6.nl  gancns.nl  kall_ellipsoids_tc03c.nl  lakes.nl  prob09.nl  process.nl  rocket400.nl  st_e03.nl  t1000.nl  wallfix.nl
benchmark/Discrete/: 4stufen.nl  chp_shorttermplan2b.nl  gasnet.nl  gastrans582_cold17_95.nl  gastrans582_mild11_95.nl  hadamard_7.nl  mbtd.nl  multiplants_stg1c.nl  multiplants_stg6.nl  nvs08.nl  nvs16.nl  nvs22.nl  sfacloc1_2_95.nl  sfacloc1_4_95.nl  sfacloc2_2_80.nl  sfacloc2_4_80.nl  waters.nl
benchmark/exclude/: ann_fermentation_exp.osil  ann_fermentation_tanh.osil  arki0007.osil
benchmark/fail/: btest14.osil  chp_shorttermplan1b.osil
data/: MixedSignomial.csv  Signomial.csv  classifier.py  gensignomial.jl  instancedata.csv
data/All/: alkylation.nl  arki0005.nl  arki0006.nl  batch0812_nc.nl  batch_nc.nl  btest14.nl  camcns.nl  casctanks.nl  chenery.nl  chp_partload.nl  chp_shorttermplan1a.nl  chp_shorttermplan1b.nl  chp_shorttermplan2d.nl  contvar.nl  eniplac.nl  ex1221.nl  ex1224.nl  ex1225.nl  ex1226.nl  ex1252a.nl  ex14_1_1.nl  ex4_1_2.nl  ex4_1_7.nl  (+110 more)
figures/: fig1.nb  fig2cc.nb  fig2sfree.nb  fig3free.nb  figcut.nb
setting/: default.set  icuts.set  lcpcuts.set  supcuts.set
src/: main.cpp  sepa_signomial.cpp  sepa_signomial.h  term_signomial.cpp  term_signomial.h
verification/: facets.py  probverify.py
(+2145 files in other folders)
